--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
-    "@pooltogether/v5": "git+https://github.com/pooltogether/pool-tokenomics-testnet.git",
     "@pooltogether/current-pool-data": "^3.7.2",
     "@pooltogether/etherplex": "^1.1.4",
     "@pooltogether/evm-chains-extended": "^0.6.4-beta.1",
@@ -36,10 +35,10 @@
     "@pooltogether/pooltogether-contracts": "^3.4.4",
     "@pooltogether/react-components": "^1.12.4",
     "@pooltogether/utilities": "^0.3.9",
-    "@pooltogether/v4-client-js": "^0.13.0",
+    "@pooltogether/v4-client-js": "1.0.0-beta.2",
     "@pooltogether/v4-pool-data": "1.7.0-beta.1",
     "@pooltogether/v4-twab-delegator-js": "^0.1.0",
-    "@pooltogether/v4-utils-js": "^0.1.3",
+    "@pooltogether/v4-utils-js": "1.0.0-beta.1",
     "@pooltogether/wallet-connection": "^0.2.1",
     "@reach/dialog": "^0.15.3",
     "@reach/menu-button": "^0.15.3",
