displaying different types of promotions on the account page

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@pooltogether/current-pool-data": "^3.7.2",
     "@pooltogether/etherplex": "^1.1.4",
     "@pooltogether/evm-chains-extended": "^0.6.4-beta.1",
-    "@pooltogether/hooks": "^1.8.1",
+    "@pooltogether/hooks": "^1.10.1",
     "@pooltogether/pooltogether-contracts": "^3.4.4",
     "@pooltogether/react-components": "^1.12.11",
     "@pooltogether/utilities": "^0.3.9",
@@ -51,6 +51,7 @@
     "autoprefixer": "^10.3.1",
     "beautiful-react-hooks": "^1.0.2",
     "classnames": "^2.3.1",
+    "date-fns": "^2.28.0",
     "eth-revert-reason": "^1.0.3",
     "ethers": "^5.6.4",
     "fathom-client": "^3.1.0",
