change name and description metadata

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "short_name": "PoolTogether",
   "name": "PoolTogether",
-  "description": "A new way to save money and have a chance to win every week.",
+  "description": "Deposit to save & win.",
   "icons": [
     {
       "src": "/pool-icon-192.png",
