--- a/package.json
+++ b/package.json
@@ -30,16 +30,16 @@
   "dependencies": {
     "@pooltogether/current-pool-data": "^3.7.2",
     "@pooltogether/etherplex": "^1.1.4",
-    "@pooltogether/evm-chains-extended": "^0.6.4-beta.1",
-    "@pooltogether/hooks": "^1.8.0",
+    "@pooltogether/evm-chains-extended": "^0.7.0",
+    "@pooltogether/hooks": "^1.10.0",
     "@pooltogether/pooltogether-contracts": "^3.4.4",
-    "@pooltogether/react-components": "^1.12.4",
+    "@pooltogether/react-components": "^1.14.0",
     "@pooltogether/utilities": "^0.5.0",
-    "@pooltogether/v4-client-js": "1.0.0-beta.2",
+    "@pooltogether/v4-client-js": "1.0.0-beta.5",
     "@pooltogether/v4-pool-data": "1.7.0-beta.1",
     "@pooltogether/v4-twab-delegator-js": "^0.1.0",
-    "@pooltogether/v4-utils-js": "1.0.0-beta.1",
-    "@pooltogether/wallet-connection": "^0.2.1",
+    "@pooltogether/v4-utils-js": "1.0.0-beta.4",
+    "@pooltogether/wallet-connection": "^0.5.1",
     "@reach/dialog": "^0.15.3",
     "@reach/menu-button": "^0.15.3",
     "@reach/tooltip": "^0.15.3",
@@ -81,11 +81,12 @@
     "react-query-devtools": "^2.6.3",
     "react-redux": "^7.2.6",
     "react-rewards": "^1.1.2",
+    "react-slick": "^0.29.0",
     "react-spring-bottom-sheet": "^3.4.0",
     "react-toastify": "^8.2.0",
     "react-tooltip": "^4.2.21",
     "redux": "^4.1.2",
     "tailwindcss": "^2.2.19",
-    "wagmi": "^0.2.26"
+    "wagmi": "^0.3.5"
   }
 }
