--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "watch": "yarn run test --watch"
   },
   "devDependencies": {
-    "@pooltogether/react-components": "^1.14.0",
+    "@pooltogether/react-components": "^1.14.3",
     "@pooltogether/wallet-connection": "^0.5.1",
     "@sentry/cli": "^1.72.2",
     "@testing-library/jest-dom": "^5.16.2",
@@ -37,7 +37,7 @@
     "@pooltogether/pooltogether-contracts": "^3.4.4",
     "@pooltogether/utilities": "^0.5.0",
     "@pooltogether/v4-client-js": "^0.14.0",
-    "@pooltogether/v4-pool-data": "1.8.0-beta.4",
+    "@pooltogether/v4-pool-data": "1.8.0",
     "@pooltogether/v4-twab-delegator-js": "^0.1.0",
     "@pooltogether/v4-utils-js": "^0.1.3",
     "@reach/dialog": "^0.15.3",
