--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@pooltogether/pooltogether-contracts": "^3.4.4",
     "@pooltogether/utilities": "^0.5.0",
     "@pooltogether/v4-client-js": "^0.14.1",
-    "@pooltogether/v4-pool-data": "1.8.0",
+    "@pooltogether/v4-pool-data": "1.8.0-beta.4",
     "@pooltogether/v4-twab-delegator-js": "^0.1.0",
     "@pooltogether/v4-utils-js": "^0.1.3",
     "@pooltogether/wallet-connection": "^0.5.2",
