--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@pooltogether/react-components": "^1.14.3",
     "@pooltogether/utilities": "^0.5.0",
     "@pooltogether/v4-client-js": "^0.14.1",
-    "@pooltogether/v4-pool-data": "1.8.1-beta.2",
+    "@pooltogether/v4-pool-data": "1.8.1",
     "@pooltogether/v4-twab-delegator-js": "^0.1.0",
     "@pooltogether/v4-utils-js": "^0.1.3",
     "@pooltogether/wallet-connection": "^0.5.2",
