--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "@coinbase/cbpay-js": "^1.0.2",
     "@pooltogether/current-pool-data": "^3.7.2",
     "@pooltogether/etherplex": "^1.1.4",
     "@pooltogether/evm-chains-extended": "^0.7.0",
     "@pooltogether/hooks": "^1.10.7",
     "@pooltogether/pooltogether-contracts": "^3.4.4",
-    "@pooltogether/react-components": "^1.16.0",
+    "@pooltogether/react-components": "^1.17.0",
     "@pooltogether/utilities": "^0.5.1",
     "@pooltogether/v4-client-js": "^0.14.2",
     "@pooltogether/v4-pool-data": "1.8.1",
