--- a/package.json
+++ b/package.json
@@ -28,19 +28,20 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "react-slick": "^0.29.0",
     "@coinbase/cbpay-js": "^1.0.2",
     "@pooltogether/current-pool-data": "^3.7.2",
     "@pooltogether/etherplex": "^1.1.4",
     "@pooltogether/evm-chains-extended": "^0.7.0",
-    "@pooltogether/hooks": "^1.10.7",
+    "@pooltogether/hooks": "^2.0.0-beta.1",
     "@pooltogether/pooltogether-contracts": "^3.4.4",
-    "@pooltogether/react-components": "^1.18.0",
+    "@pooltogether/react-components": "^2.0.0-beta.1",
     "@pooltogether/utilities": "^0.5.1",
     "@pooltogether/v4-client-js": "^0.14.2",
     "@pooltogether/v4-pool-data": "1.8.1",
     "@pooltogether/v4-twab-delegator-js": "^0.2.0",
     "@pooltogether/v4-utils-js": "^0.1.3",
-    "@pooltogether/wallet-connection": "0.5.4",
+    "@pooltogether/wallet-connection": "^1.0.0-beta.1",
     "@reach/dialog": "^0.15.3",
     "@reach/menu-button": "^0.15.3",
     "@reach/tooltip": "^0.15.3",
