--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@sentry/react": "^6.17.5",
     "@sentry/tracing": "^6.17.5",
     "@svgr/webpack": "^6.2.1",
+    "@uauth/js": "^2.3.0",
     "autoprefixer": "^10.3.1",
     "beautiful-react-hooks": "^1.0.2",
     "classnames": "^2.3.1",
