--- a/package.json
+++ b/package.json
@@ -32,15 +32,15 @@
     "@pooltogether/current-pool-data": "^3.7.2",
     "@pooltogether/etherplex": "^1.1.4",
     "@pooltogether/evm-chains-extended": "^0.7.0",
-    "@pooltogether/hooks": "^1.10.7",
+    "@pooltogether/hooks": "1.11.0-beta.1",
     "@pooltogether/pooltogether-contracts": "^3.4.4",
-    "@pooltogether/react-components": "^1.18.1",
-    "@pooltogether/utilities": "^0.5.1",
+    "@pooltogether/react-components": "1.19.0-beta.2",
+    "@pooltogether/utilities": "0.5.2-beta.1",
     "@pooltogether/v4-client-js": "^0.14.2",
-    "@pooltogether/v4-pool-data": "1.8.1",
+    "@pooltogether/v4-pool-data": "1.8.2-beta.2",
     "@pooltogether/v4-twab-delegator-js": "^0.2.0",
     "@pooltogether/v4-utils-js": "^0.1.3",
-    "@pooltogether/wallet-connection": "0.5.4",
+    "@pooltogether/wallet-connection": "0.6.0-beta.2",
     "@reach/dialog": "^0.15.3",
     "@reach/menu-button": "^0.15.3",
     "@reach/tooltip": "^0.15.3",
@@ -52,7 +52,7 @@
     "beautiful-react-hooks": "^1.0.2",
     "classnames": "^2.3.1",
     "eth-revert-reason": "^1.0.3",
-    "ethers": "^5.6.4",
+    "ethers": "5.7.0",
     "fathom-client": "^3.1.0",
     "feather-icons-react": "^0.5.0",
     "framer-motion": "^4.1.17",
@@ -86,6 +86,6 @@
     "react-tooltip": "^4.2.21",
     "redux": "^4.1.2",
     "tailwindcss": "^2.2.19",
-    "wagmi": "^0.3.5"
+    "wagmi": "0.6.4"
   }
 }
