--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@types/node": "^18.7.13",
+    "typescript": "^4.7.4",
     "@coinbase/cbpay-js": "^1.0.2",
     "@pooltogether/current-pool-data": "^3.7.2",
     "@pooltogether/etherplex": "^1.1.4",
