--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@types/node": "^18.7.13",
+    "eslint": "8.22.0",
+    "eslint-config-next": "12.2.5",
+    "eslint-config-prettier": "^8.5.0",
     "typescript": "^4.7.4",
     "@coinbase/cbpay-js": "^1.0.2",
     "@pooltogether/current-pool-data": "^3.7.2",
