--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "reinstall": "rm -rf .next out ./node_modules && yarn cache clean && yarn",
     "dev": "next dev",
-    "lint": "next lint",
+    "lint": "next lint --fix",
     "build": "next build && next export && yarn postexport",
     "postexport": "node post-export.js",
     "dist": "yarn build",
@@ -32,6 +32,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@sentry/cli": "^1.72.2",
     "@types/node": "^18.7.13",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
