--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "reinstall": "rm -rf .next out ./node_modules && yarn cache clean && yarn",
     "dev": "next dev",
     "lint": "next lint --fix",
-    "build": "next build && next export && yarn postexport",
-    "postexport": "node post-export.js",
-    "dist": "yarn build",
-    "export": "next export",
+    "build": "next build",
+    "dist": "yarn build && node post-export.js",
     "distrelease": "export NEXT_PUBLIC_RELEASE_VERSION=$(sentry-cli releases propose-version) && yarn dist && yarn sentryrelease",
     "sentryrelease": "./src/scripts/sentry-release.sh",
     "start": "next start",
