--- a/package.json
+++ b/package.json
@@ -31,16 +31,16 @@
     "@coinbase/cbpay-js": "^1.0.2",
     "@pooltogether/current-pool-data": "^3.7.2",
     "@pooltogether/etherplex": "^1.1.4",
-    "@pooltogether/evm-chains-extended": "^0.7.0",
-    "@pooltogether/hooks": "1.11.0-beta.1",
+    "@pooltogether/evm-chains-extended": "0.7.2-beta.4",
+    "@pooltogether/hooks": "1.11.0-beta.4",
     "@pooltogether/pooltogether-contracts": "^3.4.4",
-    "@pooltogether/react-components": "1.19.0-beta.2",
-    "@pooltogether/utilities": "0.5.2-beta.1",
-    "@pooltogether/v4-client-js": "^0.14.2",
+    "@pooltogether/react-components": "1.19.0-beta.3",
+    "@pooltogether/utilities": "0.5.2-beta.2",
+    "@pooltogether/v4-client-js": "0.15.0-beta.1",
     "@pooltogether/v4-pool-data": "1.8.2-beta.2",
-    "@pooltogether/v4-twab-delegator-js": "^0.2.0",
-    "@pooltogether/v4-utils-js": "^0.1.3",
-    "@pooltogether/wallet-connection": "0.6.0-beta.2",
+    "@pooltogether/v4-twab-delegator-js": "0.2.1-beta.1",
+    "@pooltogether/v4-utils-js": "0.1.4",
+    "@pooltogether/wallet-connection": "0.6.0-beta.3",
     "@reach/dialog": "^0.15.3",
     "@reach/menu-button": "^0.15.3",
     "@reach/tooltip": "^0.15.3",
