--- a/package.json
+++ b/package.json
@@ -30,12 +30,6 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@sentry/cli": "^1.72.2",
-    "@types/node": "^18.7.13",
-    "eslint": "8.22.0",
-    "eslint-config-next": "12.2.5",
-    "eslint-config-prettier": "^8.5.0",
-    "typescript": "^4.7.4",
     "@coinbase/cbpay-js": "^1.0.2",
     "@pooltogether/current-pool-data": "^3.7.2",
     "@pooltogether/etherplex": "^1.1.4",
@@ -47,18 +41,23 @@
     "@pooltogether/v4-client-js": "^0.14.2",
     "@pooltogether/v4-pool-data": "1.8.1",
     "@pooltogether/v4-twab-delegator-js": "^0.2.0",
-    "@pooltogether/v4-utils-js": "^0.1.3",
+    "@pooltogether/v4-utils-js": "^1.0.0-beta.5",
     "@pooltogether/wallet-connection": "1.0.0-beta.2",
     "@reach/dialog": "^0.15.3",
     "@reach/menu-button": "^0.15.3",
     "@reach/tooltip": "^0.15.3",
     "@reach/visually-hidden": "^0.15.2",
+    "@sentry/cli": "^1.72.2",
     "@sentry/react": "^6.17.5",
     "@sentry/tracing": "^6.17.5",
     "@svgr/webpack": "^6.2.1",
+    "@types/node": "^18.7.13",
     "autoprefixer": "^10.3.1",
     "beautiful-react-hooks": "^3.6.2",
     "classnames": "^2.3.1",
+    "eslint": "8.22.0",
+    "eslint-config-next": "12.2.5",
+    "eslint-config-prettier": "^8.5.0",
     "eth-revert-reason": "^1.0.3",
     "ethers": "^5.6.4",
     "fathom-client": "^3.1.0",
@@ -95,6 +94,7 @@
     "react-tooltip": "^4.2.21",
     "redux": "^4.1.2",
     "tailwindcss": "^2.2.19",
+    "typescript": "^4.7.4",
     "wagmi": "^0.3.5"
   }
 }
