--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@pooltogether/v4-pool-data": "1.8.2-beta.2",
     "@pooltogether/v4-twab-delegator-js": "0.2.1-beta.1",
     "@pooltogether/v4-utils-js": "0.1.4",
-    "@pooltogether/wallet-connection": "0.6.0-beta.3",
+    "@pooltogether/wallet-connection": "0.6.3",
     "@reach/dialog": "^0.15.3",
     "@reach/menu-button": "^0.15.3",
     "@reach/tooltip": "^0.15.3",
