--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@pooltogether/etherplex": "^1.1.4",
     "@pooltogether/hooks": "^1.13.4",
     "@pooltogether/pooltogether-contracts": "^3.4.4",
-    "@pooltogether/react-components": "^1.20.4",
+    "@pooltogether/react-components": "^1.20.5",
     "@pooltogether/utilities": "0.6.2",
     "@pooltogether/v4-client-js": "0.15.1",
     "@pooltogether/v4-pool-data": "1.8.2-beta.2",
@@ -73,6 +73,7 @@
     "lodash.clonedeep": "^4.5.0",
     "next": "^12.3.0",
     "next-i18next": "^12.0.1",
+    "next-themes": "^0.2.1",
     "ordinal": "^1.0.3",
     "postcss": "^8.4.6",
     "postcss-custom-properties-fallback": "^1.0.1",
