--- a/.envrc.example
+++ b/.envrc.example
@@ -5,7 +5,9 @@ export NEXT_PUBLIC_DOMAIN_NAME=
 
 # Locize API keys for localization.
 export NEXT_PUBLIC_LOCIZE_PROJECT_ID=4436efaa-7b18-4332-a5e2-57437e041619
+export LOCIZE_PROJECTID=$NEXT_PUBLIC_LOCIZE_PROJECT_ID
 export NEXT_PUBLIC_LOCIZE_VERSION=latest
+export LOCIZE_VERSION=$NEXT_PUBLIC_LOCIZE_VERSION
 
 # RPC URLs to use. Provided URLs will take precedence in the app.
 # Ethereum
@@ -41,6 +43,7 @@ export SENTRY_ORG=pooltogether
 # Optional
 # Locize Dev API key for writing values.
 export NEXT_PUBLIC_LOCIZE_DEV_API_KEY=
+export LOCIZE_API_KEY=$NEXT_PUBLIC_LOCIZE_DEV_API_KEY
 
 # Optional
 # Fathom API keys for analytics tracking.
