--- a/package.json
+++ b/package.json
@@ -35,7 +35,18 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/react-hooks": "^7.0.1",
+    "@types/node": "17.0.21",
+    "@types/react": "^18.0.20",
+    "@types/react-dom": "^18.0.6",
+    "eslint": "8.9.0",
+    "eslint-config-next": "12.1.0",
+    "jest": "^27.5.1",
     "locize-cli": "^7.12.7",
+    "prettier": "^2.7.1",
+    "typescript": "^4.8.3",
     "@coinbase/cbpay-js": "^1.0.2",
     "@pooltogether/etherplex": "^1.1.4",
     "@pooltogether/hooks": "^1.13.4",
