--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,11 +3,7 @@
   "name": "PoolTogether",
   "description": "Deposit to save & win.",
   "icons": [
-    {
-      "src": "/pool-icon-192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    }
+    {"src":"/favicon/android-chrome-192x192.png","sizes":"192x192","type":"image/png"},{"src":"/favicon/android-chrome-512x512.png","sizes":"512x512","type":"image/png"}
   ],
   "start_url": "/",
   "display": "fullscreen",
