Comments from Tjark

--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "@types/node": "17.0.21",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
-    "eslint": "8.9.0",
-    "eslint-config-next": "12.1.0",
+    "eslint": "8.22.0",
+    "eslint-config-next": "12.2.5",
+    "eslint-config-prettier": "^8.5.0",
     "jest": "^27.5.1",
     "locize-cli": "^7.12.7",
     "prettier": "^2.7.1",
@@ -38,10 +39,10 @@
   "dependencies": {
     "@coinbase/cbpay-js": "^1.0.2",
     "@pooltogether/etherplex": "^1.1.4",
-    "@pooltogether/hooks": "^2.0.0-beta.4",
+    "@pooltogether/hooks": "^2.0.0-beta.5",
     "@pooltogether/pooltogether-contracts": "^3.4.4",
-    "@pooltogether/react-components": "^2.0.0-beta.10",
-    "@pooltogether/utilities": "^0.6.2",
+    "@pooltogether/react-components": "^2.0.0-beta.11",
+    "@pooltogether/utilities": "^0.6.3",
     "@pooltogether/v4-client-js": "^0.15.4",
     "@pooltogether/v4-pool-data": "1.8.2-beta.3",
     "@pooltogether/v4-twab-delegator-js": "0.2.2",
