--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["next"],
+  "extends": "next/core-web-vitals",
   "rules": {
     "react/no-children-prop": "off",
     "react/no-unescaped-entities": "off"
