--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
     "react-device-detect": "^1.17.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.20.5",
-    "react-query": "^3.39.1",
+    "react-query": "3.39.2",
     "react-query-devtools": "^2.6.3",
     "react-redux": "^7.2.6",
     "react-rewards": "^1.1.2",
