--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
-    "@coinbase/cbpay-js": "^1.0.2",
+    "@coinbase/cbpay-js": "1.6.0",
     "@pooltogether/etherplex": "^1.1.4",
     "@pooltogether/hooks": "^2.0.0-beta.6",
     "@pooltogether/pooltogether-contracts": "^3.4.4",
-    "@pooltogether/react-components": "2.0.1",
+    "@pooltogether/react-components": "2.0.2",
     "@pooltogether/utilities": "^0.6.3",
     "@pooltogether/v4-client-js": "^0.15.4",
     "@pooltogether/v4-pool-data": "1.8.2-beta.3",
