--- a/.envrc.example
+++ b/.envrc.example
@@ -1,7 +1,10 @@
-export NODE_ENV=development
+export NEXT_PUBLIC_PT_ENV=dev
 
 # Blank if development. Domain if production.
 export NEXT_PUBLIC_DOMAIN_NAME=
+
+# Sentry DSN
+export NEXT_PUBLIC_SENTRY_DSN='https://6e3f43eb41db42cab09a14279960286e@o302107.ingest.sentry.io/6008235'
 
 # Locize API keys for localization.
 export NEXT_PUBLIC_LOCIZE_PROJECT_ID=4436efaa-7b18-4332-a5e2-57437e041619
@@ -32,9 +35,7 @@ export NEXT_PUBLIC_AVALANCHE_FUJI_RPC_URL=
 export NEXT_PUBLIC_CELO_MAINNET_RPC_URL=
 export NEXT_PUBLIC_CELO_TESTNET_RPC_URL=
 
-# Sentry DSN
-export NEXT_PUBLIC_SENTRY_DSN='https://6e3f43eb41db42cab09a14279960286e@o302107.ingest.sentry.io/6008235'
-
+# Optional
 # Locize Dev API key for writing values.
 export NEXT_PUBLIC_LOCIZE_DEV_API_KEY=
 export LOCIZE_API_KEY=$NEXT_PUBLIC_LOCIZE_DEV_API_KEY
