--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
     "eslint-config-prettier": "^8.5.0",
+    "eth-permit": "^0.2.3",
     "jest": "^27.5.1",
     "locize-cli": "^7.12.7",
     "prettier": "^2.7.1",
