--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "@wagmi/chains": "^0.1.13",
+    "apex-integration": "^1.0.9",
     "autoprefixer": "^10.3.1",
     "beautiful-react-hooks": "^3.6.2",
     "classnames": "^2.3.1",
