Migrate to walletconnect v2

--- a/.envrc.example
+++ b/.envrc.example
@@ -6,6 +6,9 @@ export NEXT_PUBLIC_DOMAIN_NAME=
 # Sentry DSN
 export NEXT_PUBLIC_SENTRY_DSN='https://6e3f43eb41db42cab09a14279960286e@o302107.ingest.sentry.io/6008235'
 
+# WalletConnect Project ID
+export NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=''
+
 # Locize API keys for localization.
 export NEXT_PUBLIC_LOCIZE_PROJECT_ID=4436efaa-7b18-4332-a5e2-57437e041619
 export LOCIZE_PROJECTID=$NEXT_PUBLIC_LOCIZE_PROJECT_ID
