--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "jest": "^27.5.1",
     "locize-cli": "^7.12.7",
     "prettier": "^2.7.1",
-    "typescript": "^4.8.3"
+    "typescript": "4"
   },
   "dependencies": {
     "@coinbase/cbpay-js": "1.6.0",
@@ -49,7 +49,7 @@
     "@pooltogether/v4-twab-delegator-js": "0.2.2",
     "@pooltogether/v4-utils-js": "0.1.5",
     "@pooltogether/wallet-connection": "1.0.3",
-    "@rainbow-me/rainbowkit": "^0.8.1",
+    "@rainbow-me/rainbowkit": "^0.12.12",
     "@reach/dialog": "^0.15.3",
     "@reach/menu-button": "^0.15.3",
     "@reach/tooltip": "^0.15.3",
@@ -107,7 +107,7 @@
     "react-toastify": "^8.2.0",
     "react-tooltip": "^4.2.21",
     "tailwindcss": "^2.2.19",
-    "typescript": "^4.8.3",
-    "wagmi": "0.9.0"
+    "typescript": "4",
+    "wagmi": "^0.12.12"
   }
 }
