--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "react-spring-bottom-sheet": "3.5.0-alpha.0",
     "react-toastify": "^8.2.0",
     "react-tooltip": "^4.2.21",
+    "sonner": "^1.2.0",
     "tailwindcss": "^2.2.19",
     "typescript": "4",
     "wagmi": "0.12.17"
